# fastapi_project2

./: .gitignore  .pre-commit-config.yaml  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/data/: students.json
alembic/versions/: 7f30f9a30953_.py  8233ded920ca_moving_is_active_to_user_table.py
api/: courses.py  users.py
api/utils/: users.py
db/: db_setup.py
db/models/: course.py  user.py
pydantic_schemas/: user.py
